--- a/WebApp/Areas/Admin/Views/Employee/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Index.cshtml
@@ -76,7 +76,7 @@
                                 <td>@item.Department.Name</td>
                                 <td>@item.Name</td>
                                 <td>@item.Username</td>
-                                <td><img src="@item.Image" width="100px" /></td>
+                                <td><img src="@item.Image" /></td>
                                 <td>@item.Phone</td>
                                 <td>@(string.Format("{0:dd/MM/yyyy}", item.Birthday))</td>
                                 <td>@item.TimeStart</td>
