--- a/WebApp/Areas/Admin/Views/Statistic/GetDataDailyList.cshtml
+++ b/WebApp/Areas/Admin/Views/Statistic/GetDataDailyList.cshtml
@@ -12,10 +12,91 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script>
         var ticketName = @Html.Raw(Json.Encode(ViewBag.ticketName));
-        var ticketCount = @Html.Raw(Json.Encode(ViewBag.ticketCount));
-        var ticketPrice = @Html.Raw(Json.Encode(ViewBag.ticketPrice));
+        var ticketCountinMonth = @Html.Raw(Json.Encode(ViewBag.ticketCountinMonth));
+        var ticketPriceinMonth = @Html.Raw(Json.Encode(ViewBag.ticketPriceinMonth));
+        var month = @Html.Raw(Json.Encode(ViewBag.month));
         var deparmentName = @Html.Raw(Json.Encode(ViewBag.deparmentName));
-    </script>  
+    </script>
+    <script>
+        var ctx = document.getElementById('myChart').getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: deparmentName,
+                datasets: [{
+                    label: 'Doanh thu bán vé ' + month + ' (VNĐ)',
+                    data: ticketPriceinMonth,
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(255, 99, 132, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(255, 99, 132, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    </script>
+    <script>
+        var ctx = document.getElementById('myChartcount').getContext('2d');
+        var myChartcount = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: deparmentName,
+                datasets: [{
+                    label: 'Số lượng vé bán ' + month + ' (VNĐ)',
+                    data: ticketCountinMonth,
+                    backgroundColor: [
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(54, 162, 235, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(54, 162, 235, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    </script>
     <script>
         new Chart(document.getElementById("line-chart"), {
             type: 'line',
@@ -58,114 +139,79 @@
         });
     </script>
     <script>
-        new Chart(document.getElementById("pie-chart"), {
+        new Chart(document.getElementById("pie-chart-count"), {
             type: 'pie',
             data: {
-                labels: ticketName,
+                labels: deparmentName,
                 datasets: [{
-                    label: "Số lượng vé",
+                    label: "Population (millions)",
                     backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850"],
-                    data: ticketCount
+                    data: ticketCountinMonth
                 }]
             },
             options: {
                 title: {
                     display: true,
-                    text: 'Số lượng vé bán ra'
+                    text: 'Số lượng vé bán ' + month + ' (VNĐ)'
                 }
             }
         });
     </script>
     <script>
-        new Chart(document.getElementById("bar-chart-grouped"), {
-            type: 'bar',
+        new Chart(document.getElementById("line-chart-count"), {
+            type: 'line',
             data: {
-                labels: ["1900", "1950", "1999", "2050"],
-                datasets: [
-                    {
-                        label: "Africa",
-                        backgroundColor: "#3e95cd",
-                        data: [133, 221, 783, 2478]
-                    }, {
-                        label: "Europe",
-                        backgroundColor: "#8e5ea2",
-                        data: [408, 547, 675, 734]
-                    }
+                labels: [1500, 1600, 1700, 1750, 1800, 1850, 1900, 1950, 1999, 2050],
+                datasets: [{
+                    data: [86, 114, 106, 106, 107, 111, 133, 221, 783, 2478],
+                    label: "Africa",
+                    borderColor: "#3e95cd",
+                    fill: false
+                }, {
+                    data: [282, 350, 411, 502, 635, 809, 947, 1402, 3700, 5267],
+                    label: "Asia",
+                    borderColor: "#8e5ea2",
+                    fill: false
+                }, {
+                    data: [168, 170, 178, 190, 203, 276, 408, 547, 675, 734],
+                    label: "Europe",
+                    borderColor: "#3cba9f",
+                    fill: false
+                }, {
+                    data: [40, 20, 10, 16, 24, 38, 74, 167, 508, 784],
+                    label: "Latin America",
+                    borderColor: "#e8c3b9",
+                    fill: false
+                }, {
+                    data: [6, 3, 2, 2, 7, 26, 82, 172, 312, 433],
+                    label: "North America",
+                    borderColor: "#c45850",
+                    fill: false
+                }
                 ]
             },
             options: {
                 title: {
                     display: true,
-                    text: 'Population growth (millions)'
+                    text: 'World population per region (in millions)'
                 }
-            }
-        });
-    </script>
-    <script>
-        var ctx = document.getElementById("myChart4").getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: deparmentName,
-                datasets: [{
-                    label: 'Employee',
-                    backgroundColor: "#caf270",
-                    data: ticketPrice,
-                }, {
-                    label: 'Engineer',
-                    backgroundColor: "#45c490",
-                    data: ticketPrice,
-                }, {
-                    label: 'Government',
-                    backgroundColor: "#008d93",
-                        data: ticketPrice,
-                }, {
-                    label: 'Political parties',
-                    backgroundColor: "#2e5468",
-                        data: ticketPrice,
-                }],
-            },
-            options: {
-                tooltips: {
-                    displayColors: true,
-                    callbacks: {
-                        mode: 'x',
-                    },
-                },
-                scales: {
-                    xAxes: [{
-                        stacked: true,
-                        gridLines: {
-                            display: false,
-                        }
-                    }],
-                    yAxes: [{
-                        stacked: true,
-                        ticks: {
-                            beginAtZero: true,
-                        },
-                        type: 'linear',
-                    }]
-                },
-                responsive: true,
-                maintainAspectRatio: false,
-                legend: { position: 'bottom' },
             }
         });
     </script>
 }
 <div class="row">
-    <div class="col-md-6">
-        <canvas id="myChart4" width="800" height="450"></canvas>
-    </div>
-    <div class="col-md-6">
-        <canvas id="pie-chart" width="800" height="450"></canvas>
-    </div>
-    <div class="col-md-6">
-        <canvas id="bar-chart-grouped" width="800" height="450"></canvas>
-    </div>
+
     <div class="col-md-6">
         <canvas id="myChart" width="800" height="450"></canvas>
+    </div>
+    <div class="col-md-6">
+        <canvas id="line-chart" width="800" height="450"></canvas>
+    </div>
+    <div class="col-md-6">
+        <canvas id="pie-chart-count" width="800" height="450"></canvas>
+    </div>
+    <div class="col-md-6">
+        <canvas id="line-chart-count" width="800" height="450"></canvas>
     </div>
 
 </div>
