--- a/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -295,7 +295,7 @@
                                     <a href="/Admin/Statistic/TicketIndex">Doanh số bán vé</a>
                                 </li>
                                 <li>
-                                    <a href="#">Tip của KTV</a>
+                                    <a href="/Admin/Statistic/EmpIndex">Tip của KTV</a>
                                 </li>
                                 <li>
                                     <a href="#">Doanh số bán vé</a>
