--- a/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
@@ -13,10 +13,9 @@
         $("#txtsearch").on("keyup", function () {
             var txtenter = $(this).val();
             $("table tr").each(function (results) {
-                if (results!==0) {
+                if (results !== 0) {
                     var id = $(this).find("td:nth-child(3)").text();//Vị trí của <td>từ 1 đếm xuống tương ứng với mã KTV
-                    if (id.indexOf(txtenter) !== 0 && id.toLowerCase().indexOf(txtenter.toLowerCase()) < 0)
-                    {
+                    if (id.indexOf(txtenter) !== 0 && id.toLowerCase().indexOf(txtenter.toLowerCase()) < 0) {
                         $(this).hide();
                     }
                     else {
@@ -26,104 +25,118 @@
             })
         });
     </script>
-    }
-<div class="row">
-
-    <div class="col-lg-12">
-
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Danh sách bảng kê
-            </div>
-
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                @using (Html.BeginForm("Index", "DailyList", FormMethod.Get))
-                {
-
-                    <div class="row form-group">
-                        <div class="col-lg-12">
-                            <div class="col-md-4">
-                                @*<input type="text" id="txtsearch" class="form-control" placeholder="Nhập vào mã KTV" />*@
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào ID hoặc mã KTV" />
-                            </div>
-                            <div class="col-md-4">
-                                <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/DailyList/Create">Thêm mới</a>
-                            </div>
-                        </div>
+}
+<div class="panel panel-default">
+    @using (Html.BeginForm("Index", "DailyList", FormMethod.Get))
+    {
+    
+    <div class="panel-heading">
+        <div class="row">
+            <div class="row form-group">
+                <div class="col-lg-12">
+                    <div class="col-md-4">
+                        @*<input type="text" id="txtsearch" class="form-control" placeholder="Nhập vào mã KTV" />*@
+                        <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào ID" />
                     </div>
-                }
-                <hr />
-                <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-hover">
-                        <thead>
-                            <tr>
-                                <th>Chi nhánh</th>
-                                <th>ID</th>
-                                <td>KTV</td>
-                                <td>Phòng</td>
-                                <td>Giờ vào</td>
-                                <td>Giờ ra</td>
-                                <td>Giá vé</td>
-                                <td>Tip</td>
-                                <td>Code</td>
-                                <td>CTV</td>
-                                <td>Tổng tiền</td>
-                                <td>Xác nhận</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
-                            <tr id="row_@item.ID">
-
-                                <th>@item.Room.Department.Name</th>
-                                <th>#@item.ID</th>
-                                <td>@item.Employee_ID</td>
-                                <td>@item.Room.Name</td>
-                                <td>@(string.Format("{0:HH:mm}", item.TimeIn))</td>
-                                <td>@(string.Format("{0:HH:mm}", item.TimeOut))</td>
-                                <td>@(string.Format("{0:#,##0}", item.Ticket.Price))</td>
-                                <td>@(string.Format("{0:#,##0}", item.Tip))</td>
-                                <td>@item.Voucher.Code</td>
-
-                                @{
-                                    if (item.Taxi_ID != null)
-                                    {
-                                        <td>@(string.Format("{0:#,##0}", item.Taxi.Price))</td>
-                                        <td>@(string.Format("{0:#,##0}", item.Total))</td>
-                                    }
-                                    else
-                                    {
-                                        <td></td>
-                                        <td>@(string.Format("{0:#,##0}", item.Total))</td>
-                                    }
-                                }
-                                <td><a href="/Admin/DailyList/Comfirm/@item.ID" class="btn-active" data-id="@item.ID">@Html.Raw(item.Status ? "<strong style=\"color:Green;\">Đã xác nhận</strong>" : "<strong style=\"color:Tomato;\">Xác nhận</strong>")</a></td>
-
-                                <td>
-                                    <a href="/Admin/DailyList/Edit/@item.ID">Sửa</a>
-                                    |
-                                    <a href="/Admin/DailyList/Detail/@item.ID">Chi tiết</a>
-                                    @*@Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
-            {
-                Confirm = "Bạn có muốn xoá bản ghi này?",
-                OnComplete = "$('#row_" + @item.ID + "').remove()",
-                HttpMethod = "Delete"
-            })*@
-                                </td>
-                            </tr>
-                            }
-
-
-                        </tbody>
-                    </table>
-                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = @ViewBag.SearchString }))
+                    <div class="col-md-4">
+                        <button type="submit" class="btn btn-success">Tìm kiếm</button>
+                        <a class="btn btn-primary" href="/Admin/DailyList/Create">Thêm mới</a>
+                    </div>
                 </div>
-                <!-- /.table-responsive -->
-            </div>
-            <!-- /.panel-body -->
+            </div>        
         </div>
     </div>
+    }
+    @*Receive All Database Data From Controller And Display Those Data In Client Side*@
+
+    @if (Model.Count() != 0)
+    {
+        foreach (var item in Model)
+        {
+            <div class="panel-body">
+                <table class="table table-striped table-responsive">
+                    <tbody>
+                        <tr>
+                            <th>@Html.ActionLink(" ", "EditDailyList", new { id = item.ID }, new { @class = "btn btn-warning pull-right  btn-sm glyphicon glyphicon-edit" })#ID: @item.ID </th>
+                            <th>Yêu cầu: @item.Description </th>
+                            <td>
+                                Ngày: @item.CreatedDate
+                                <a href="/Admin/DailyList/Comfirm/@item.ID" class="btn btn-default" data-id="@item.ID">@Html.Raw(item.Status ? "<strong style=\"color:Green;\">Đã xác nhận</strong>" : "<strong style=\"color:Tomato;\">Xác nhận</strong>")</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                <table class="table table-bordered">
+                                    <tbody>
+                                        <tr>
+                                            <th>Phòng</th>
+                                            <th>Vé</th>
+                                            <th>Giá vé</th>
+                                            <th>Voucher/Code</th>
+                                            <th>Số tiền</th>
+                                            <td></td>
+                                        </tr>
+                                        @{
+                                            var totalBill = 0;
+                                        }
+                                        @foreach (var order in item.OrderDetails)
+                                        {
+                                            <tr>
+                                                <td>@order.Room.Name</td>
+                                                <td>@order.Ticket.Name</td>
+                                                <td>@order.Ticket.Price</td>
+                                                <td>@order.DailyList.Voucher.Code</td>
+                                                <td>@order.Amount</td>
+                                                <td>@Html.ActionLink(" ", "EditOrder", new { id = @order.ID }, new { @class = "btn btn-warning pull-right  btn-sm glyphicon glyphicon-edit" })</td>
+                                            </tr>
+
+                                            <tr>
+                                                <th>KTV</th>
+                                                <th>Tip</th>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                @foreach (var emp in order.DailyEmployees)
+                                                {
+                                                <tr>
+                                                    <td>@emp.Employee.Code</td>
+                                                    <td>@emp.Tip</td>
+                                                    <td>@Html.ActionLink(" ", "EditEmp", new { orderId = @order.ID, empId = emp.Employee_ID }, new { @class = "btn btn-warning pull-right  btn-sm glyphicon glyphicon-edit" })</td>
+                                                </tr>
+                                            }
+                                </tr>
+                                totalBill = totalBill + @Convert.ToInt32(order.Amount) + Convert.ToInt32(order.DailyEmployees.Sum(x => x.Tip));
+                            }
+                                    </tbody>
+                                </table>
+                                <span class="pull-right" style="margin-right:100px;">
+
+                                    @{
+                                        if (item.Taxi_ID != null)
+                                        {
+                                            <strong>Giảm trực tiếp : </strong> @item.Taxi.Price <strong class="glyphicon glyphicon-arrow-right"></strong>
+                                            <strong>Total Bill :  </strong> @(totalBill-item.Taxi.Price)
+                                        }
+                                        else
+                                        {
+                                            <strong>Total Bill :  </strong> @totalBill
+                                        }
+                                    }
+
+                                </span>
+                                </td>
+                                </tr>
+                                </tbody>
+                                </table>
+                            </div>
+                        }
+                    }
+                    else
+                    {
+                        <div class="panel-body">
+                            <h3 style="color:red;">Empty!</h3>
+                        </div>
+
+                    }
 </div>
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = @ViewBag.SearchString }))
